# VK-Core

./: .gitignore  .gitmodules  CMakeLists.hpp  CMakeLists.txt  Config.cmake.in  LICENSE  PyConfig.py  README.md  test.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: CL-Core.cmake  CL-Core.cmake.hpp  CL-CoreConfig.py  CL-CoreConfig.sh  CLDir.sh  CLFile.sh  Core.cmake  VK-Core.cmake  VKDir.sh  VKFile.sh
hin/: needed.h.in
inc/ae2fVK/: README.md  Spvc.h  clspv.h  clspv_clkeys.h
inc/ae2fVK/clspv/: addrspec.h  atom.h  key.h  sclr.h  stdint.h  sync.h  wrkitem.h
include/ae2fCL/: Loc.h  Scenario.h
include/ae2fVK/: Loc.h
src/: Slang.def.c  Spvc.def.c  Spvc.imp.c  a.cl  a.cl.c  a.clh
test/: a.c  vk.h
test-shader/: compute.glsl
test/clspv/: a.c
test/spvc/: a.c
test/src/: a.c
test/vk/: init.c  leak.c  pureinstance.c
